# bot-staging

./: BUILD.bazel  README.md
.bot/: dnscontrol.yaml
dns/: creds.json  dnsconfig.js
helloworld/: BUILD.bazel  main.go
